k8s/AppMesh/index-backend-deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: index-backend
  namespace: api
  labels:
    app: index-backend
spec:
  selector:
    matchLabels:
      app: index-backend
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: index-backend
    spec:
      serviceAccount: envoy-proxy
#      nodeSelector:
#       karpenter.sh/provisioner-name: arm-fleet
      containers:
      - name: index-backend
        image: codesenju/index-backend.api.local:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: index-b-5000
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 10
          timeoutSeconds: 60
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 10
          timeoutSeconds: 60
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
#############
## SERVICE ##
#############
---
apiVersion: v1
kind: Service
metadata:
#  name: index-backend-nlb
  namespace: api
  name: index-backend
#  # Create a service with an internet-facing Network Load Balancer that load balances to IP targets
#  # https://docs.aws.amazon.com/eks/latest/userguide/network-load-balancing.html#network-load-balancer
#  # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/service/nlb/
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: external
#    # service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
#    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
#    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
#    service.beta.kubernetes.io/aws-load-balancer-name: index-backend-nlb # Optional
#    # service.beta.kubernetes.io/aws-load-balancer-healthcheck-path:
#    ## https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/service/annotations/#subnets
#    ##service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-0afa2013429dcf39d, subnet-059f8983857cffa5e
spec:
  ports:
    - port: 5000 # same as listener port if using as AWS NLB
      targetPort: 5000
      protocol: TCP
#  type: LoadBalancer
  type: ClusterIP
  selector:
    app: index-backend
