k8s/AppMesh/virtual-gateway-01.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-gw
  namespace: api
  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    external-dns.alpha.kubernetes.io/hostname: api.lmasu.co.za
spec:
  type: ClusterIP
#  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: ingress-gw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-gw
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-gw
  template:
    metadata:
      labels:
        app: ingress-gw
    spec:
      serviceAccountName: envoy-proxy
      securityContext:
        fsGroup: 65534
      containers:
        - name: envoy
          image: public.ecr.aws/appmesh/aws-appmesh-envoy:v1.23.1.0-prod
          ports:
            - containerPort: 8080
---
