k8s/AppMesh/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: api
  name: api-alb-ingress
  annotations:
    # alb.ingress.kubernetes.io/group.order: '2'
    alb.ingress.kubernetes.io/success-codes: 200,307
    alb.ingress.kubernetes.io/tags: auto-delete=no,service=eks
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: appmesh-alb-ingress
    alb.ingress.kubernetes.io/group.name: api
    ## SSL Settings
    # https://www.youtube.com/watch?v=TsVO14-lqp0
    # Third Party Documentation - Enable SSL https://www.stacksimplify.com/aws-eks/aws-alb-ingress/learn-to-enable-ssl-on-alb-ingress-service-in-kubernetes-on-aws-eks/
    # Ingress annotations https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.4/guide/ingress/annotations/
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:587878432697:certificate/a850a4a0-11c0-41a3-9a4a-4288f0c6be7d
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - host: uat-api.lmasu.co.za # SSL Setting (Optional only if we are not using certificate-arn annotation)
      http:
        paths:
          - path: / # SSL Redirect Setting
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
#          - path: /api/v1
#            pathType: Prefix
#            backend:
#              service:
#                name: nodeapi
#                port:
#                  number: 3000
#          - path: /index
#            pathType: Prefix
#            backend:
#              service:
#                name: index
#                port:
#                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-gw
                port:
                  number: 80
