k8s/AppMesh/frontend-appmesh.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: frontend
  namespace: api
spec:
  awsName: frontend
  provider:
#    virtualNode:
#      virtualNodeRef:
#        name: frontend-node
    virtualRouter:
      virtualRouterRef:
        name: frontend-router
