k8s/AppMesh/index-appmesh.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: index
  namespace: api
spec:
  awsName: index
  provider:
#    virtualNode:
#      virtualNodeRef:
#        name: index-node
# Virtual router provider https://github.com/aws/aws-app-mesh-examples/blob/main/walkthroughs/howto-k8s-alb/v1beta2/manifest.yaml.template
    virtualRouter:
      virtualRouterRef:
        name: index-router
