k8s/AppMesh/index-backend-appmesh.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: index-backend
  namespace: api
spec:
  awsName: index-backend
  provider:
    virtualNode:
      virtualNodeRef:
        name: index-backend-node
