k8s/AppMesh/nodeapi-appmesh.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: nodeapi
  namespace: api
spec:
  awsName: nodeapi
  provider:
    virtualNode:
      virtualNodeRef:
        name: nodeapi-node
