k8s/AppMesh/postgres-appmesh.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: pgmoviedb
  namespace: api
spec:
  awsName: pgmoviedb
  provider:
    virtualNode:
      virtualNodeRef:
        name: pgmoviedb-node
